# axb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  decompositions.rs
src/: lib.rs
src/matrix/: errors.rs  mod.rs  transform.rs
