[package]
name = "axb"
version = "0.2.1"
edition = "2021"
authors = ["Ilia Sichinava"]
repository = "https://github.com/toxicmaximalist/axb"
description = "A lightweight, zero-dependency linear algebra library with compile-time dimension checking"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["linear-algebra", "matrix", "math", "numerical", "const-generics"]
categories = ["mathematics", "science"]
documentation = "https://docs.rs/axb"
rust-version = "1.56"

[lib]
name = "axb"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[[example]]
name = "basic_usage"

[[example]]
name = "decompositions"

[badges]
maintenance = { status = "actively-developed" }
